...
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.unit.dp

object SwitchTestTags {
  const val SWITCH_CONTAINER = "switchContainer"
  const val SWITCH = "switch"
}

/**
 * A reusable component for a preference switch with a label.
 *
 * @param label The text label for the switch.
...
