...
              TransportMode.TRAIN,
              startDate = Timestamp(date),
              endDate = Timestamp(date),
          )
      val routeSegment2 =
          RouteSegment(
              Location(Coordinate(0.0, 0.0), "test"),
              Location(Coordinate(1.0, 1.0), "test destination"),
              150,
              5,
              listOf(Coordinate(0.0, 0.0), Coordinate(0.0, 1.0), Coordinate(1.0, 1.0)),
              TransportMode.UNKNOWN,
              startDate = Timestamp(date),
...
